--- a/03_Fiches_thematiques/fiche_pivoter_donnees.Rmd
+++ b/03_Fiches_thematiques/fiche_pivoter_donnees.Rmd
@@ -20,6 +20,13 @@ On trouve également dans la littérature les termes de *data.wrangling*, *resha
 
 -->
 
+
+::: {.conseil data-latex=""}
+Il est possible de réaliser les jointures avec chacune des trois approches présentées ici. Il est néanmoins conseillé d'être cohérent avec les outils de manipulation de données que vous utilisez. Si vous manipulez vos données avec `data.table`, il sera préférable d'utiliser la fonction `merge` de ce _package_ qui est optimisée pour les objets `data.table`. Si vous manipulez vos données avec le `tidyverse`, il est recommandé d'utiliser les fonctions du *package* `dplyr`.
+:::
+
+
+
 ## Principe de la restructuration des données
 
 Une table de données stocke des informations sous forme de lignes et de colonnes. Au cours d'un traitement statistique, il est souvent nécessaire de restructurer les données, en transformant en colonnes certaines informations qui figuraient en ligne (ou inversement). Les deux principales opérations de restructuration des données peuvent être illustrées par les deux transformations suivantes:
@@ -40,6 +47,8 @@ library(doremifasol)
 bpe_ens_2018 <- bpe_ens_2018
 filosofi_epci_2016 <- filosofi_epci_2016
 ```
+
+
 
 
 ## Restructurer des données avec le `tidyverse`
